# ollama_filter

./: Cargo.toml  README.md
src/: main.rs
