[package]
name = "ollama_filter"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3 

[dependencies]
embryo = { git = "ssh://git@github.com/EmergenceSystem/Embryo.git" }
em_filter = { git = "ssh://git@github.com/EmergenceSystem/em_filter.git" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
actix-web="4.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
url = "2.2"
chrono ="0.4.37"
